<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.passwordgenerator.MainActivity">

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_async_length"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/seekBar_async_length"
        android:max="16" />

    <Button
        android:text="@string/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar_async_length"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_generate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_thread_count"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:id="@+id/textView_thread_passcount"
        android:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_thread_length"
        android:layout_toLeftOf="@+id/textView_thread_passcount"
        android:layout_toStartOf="@+id/textView_thread_passcount"
        android:id="@+id/textView_thread_passlength"
        android:text="7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_async_count"
        android:layout_toLeftOf="@+id/textView_thread_passlength"
        android:layout_toStartOf="@+id/textView_thread_passlength"
        android:id="@+id/textView_async_passcount"
        android:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar_async_length"
        android:layout_alignRight="@+id/textView_async_passcount"
        android:layout_alignEnd="@+id/textView_async_passcount"
        android:id="@+id/textView_async_passlength"
        android:text="7" />

    <TextView
        android:text="@string/For_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_forthread"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/password_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView_thread_count"
        android:layout_below="@+id/textView_forthread"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/seekBar_thread_count"
        android:max="9"
        android:layout_below="@+id/textView_thread_passcount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/password_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView_thread_length"
        android:layout_below="@+id/seekBar_thread_count"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/seekBar_thread_length"
        android:max="16"
        android:layout_below="@+id/textView_thread_length"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/password_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/textView_async_count"
        android:layout_below="@+id/textView_for_async"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/for_async"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textView_for_async"
        android:layout_below="@+id/seekBar_thread_length"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/password_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_async_length"
        android:layout_below="@+id/seekBar_async_count"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/seekBar_async_count"
        android:max="9"
        android:layout_below="@+id/textView_async_passcount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
